# ogmac

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  project.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: test.yml
Ogmac/: AppDeps.swift  ConfigStore.swift  DebugLog.swift  FirstLaunchView.swift  HistoryView.swift  IconState.swift  Info.plist  LaunchAtLogin.swift  LogReader.swift  MenuPanelView.swift  OgmacApp.swift  OgmacRunner.swift  RunnerError.swift  SettingsConnectionTab.swift  SettingsPrivacyTab.swift  SettingsScene.swift  SettingsSyncTab.swift  SettingsViewModel.swift  StateFileWatcher.swift  StateReader.swift  StatusController.swift
Ogmac.xcodeproj/: project.pbxproj
Ogmac/Models/: ConfigDoc.swift  PanelSummary.swift  StateSnapshot.swift  SyncRun.swift
OgmacTests/: AppLaunchTests.swift  ConfigStoreTests.swift  LaunchAtLoginTests.swift  LogReaderTests.swift  OgmacRunnerTests.swift  PanelSummaryTests.swift  SettingsViewModelTests.swift  SmokeTests.swift  StateReaderTests.swift  StatusControllerTests.swift
OgmacTests/Fixtures/: config_canonical.yaml  config_legacy.yaml  state_disabled.sqlite  state_failed.sqlite  state_healthy.sqlite  state_paused.sqlite  sync_log_clean.txt  sync_log_failed.txt  sync_log_partial.txt  sync_log_rotated.log.1  sync_log_skipped.txt
docs/: architecture.md  operations.md  setup.md  troubleshooting.md
packaging/: build_app.sh  com.ogmac.sync.plist  install.sh
packaging/Casks/: ogmac.rb
scripts/: probe_eventkit.py
src/ogmac/: __main__.py  auth.py  cli.py  config.py  google.py  logging_setup.py  models.py  notify.py  outlook.py  outlook_eventkit.py  reconciler.py  state.py
tests/e2e/: test_full_run.py
(+22 files in other folders)
